fixing paddings on tablet in faq

--- a/src/sass/sections/_faq.scss
+++ b/src/sass/sections/_faq.scss
@@ -80,7 +80,7 @@
     &__item:nth-child(1){
         padding-left: 4px;
 
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 768px) {
             padding-left: 32px;
         }
     }
@@ -88,7 +88,7 @@
     &__item:nth-child(3) {
         padding-left: 4px;
         
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 768px) {
             padding-left: 32px;
         }
     }
@@ -96,7 +96,7 @@
     &__item:nth-child(5) {
         padding-left: 4px;
         
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 768px) {
             padding-left: 32px;
         }
     }
